examples/errors/branch_type.aaa
fn main {
    if true {
        3
    else
        ""
    }
    drop
}
